--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Disneyplust</title>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="../dist/css/main.css">
 </head>
 <body>
-     <h1>Olá mundo </h1>
+     <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./dist/images/disneyplus.svg" alt="Disneyplus">
+            </h1>
+            <h3 class="title--small">
+                As melhores histórias em um só lugar.
+            </h3>
+            <p>
+                <a href="#" class="link-text">Assinar o Disney+</a>
+                <br>
+                <span class="text">
+                    R$ 27,90/mês ou 279,90/ano a vista*
+                </span>
+            </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt=" Disney+ - star+ - combo+">
+                    <button>ASSINE AGORA</button>
+                    <span class="text">R$ 49,90/mês</span>
+                </li>
+
+                  <li class="hero__content__combos__combo">
+                    <img src="./dist/images/logos/disney_star_plus.png" alt=" Disney+ - star+ - combo+">
+                    <button>ASSINE AGORA</button>
+                    <span class="text">R$ 49,90/mês</span>
+                </li>
+                
+            </ul>
+        </div>
+     </section>
 </body>
 </html>
