--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt=" Disney+ - star+ - combo+">
                     <button>ASSINE AGORA</button>
-                    <span class="text">R$ 49,90/mês</span>
+                    <span class="text">R$ 49,90/mês*</span>
                 </li>
 
                   <li class="hero__content__combos__combo">
@@ -36,6 +36,9 @@
                 </li>
                 
             </ul>
+            <p class="text--small">
+                *O preço pode variar caso a assinatura seja feita através de outras plataformas.
+            </p>
         </div>
      </section>
 </body>
