--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt=" Disney+ - star+ - combo+">
-                    <button>ASSINE AGORA</button>
+                    <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 49,90/mês*</span>
                 </li>
 
                   <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt=" Disney+ - star+ - combo+">
-                    <button>ASSINE AGORA</button>
+                    <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 49,90/mês</span>
                 </li>
                 
@@ -116,6 +116,41 @@
             </li>
         </ul>
      </section>
+
+    <section class="plans">
+        <h2 class="title--big">Escolha seu plano </h2>
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="Disney+">
+                <strong class="title--small">R$ 27,00/mês</strong>
+                <p class="text--big">
+                    No Disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney+">
+                <strong class="title--small">R$ 45,90/mês</strong>
+                <p class="text--big">
+                    Assine Disney+ e Star+ juntos.
+                    Economize e aproveite agora os dois serviços por um preço único.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
+                <strong class="title--small">R$ 59,90/mês</strong>
+                <p class="text--big">
+                    Disney, Star+ e STARZTPLAY em um plano especial. Assine agora os três serviços juntos.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+        </ul>
+        <p class="text--samll">
+            *Opreço pode variar caso a assinatuara seja feita através de outras plataformas.
+        </p>
+    </section>
+
      <script src="./src/main.js"></script>
 </body>
 </html>
